--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "autoprefixer": "^8.2.0",
     "babel-loader": "^8.0.0-beta.2",
     "bcrypt": "^3.0.2",
+    "bootstrap": "^4.1.3",
     "connect-history-api-fallback": "^1.5.0",
     "copy-webpack-plugin": "^4.5.1",
     "css-loader": "^0.28.11",
@@ -34,6 +35,7 @@
     "nodemon": "^1.17.2",
     "postcss-loader": "^2.1.3",
     "react": "^16.2.0",
+    "react-bootstrap": "^1.0.0-beta.3",
     "react-dom": "^16.2.0",
     "react-hot-loader": "^4.0.0",
     "react-router": "^4.2.0",
